fix layout, sửa UI login + cài lib, sửa scrollbar

--- a/my-exam-management-system/src/modules/Login/login.scss
+++ b/my-exam-management-system/src/modules/Login/login.scss
@@ -43,7 +43,7 @@
     .video-placeholder {
       width: 280px;
       height: 180px;
-      background-color: #e0e0e0;
+      background-color: white;
       border-radius: 8px;
       display: flex;
       justify-content: center;
